--- a/.github/workflows/crawler_processor.yml
+++ b/.github/workflows/crawler_processor.yml
@@ -6,16 +6,33 @@ on:
 jobs:
   build:
     name: Process crawler
+    permissions:
+      actions: write
+      checks: write
+      contents: write
+      deployments: write
+      issues: write
+      packages: write
+      pull-requests: write
+      repository-projects: write
+      security-events: write
+      statuses: write
     runs-on: ubuntu-latest
-
+    env:
+      SUPABASE_URL: ${{secrets.SUPABASE_URL}}
+      SUPABASE_ANON_KEY: ${{secrets.SUPABASE_ANON_KEY}}
+      SUPABASE_SERVICE_KEY: ${{secrets.SUPABASE_SERVICE_KEY}}
     steps:
     - name: Extract branch name
       shell: bash
-      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+      run: echo "branch=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_OUTPUT
       id: extract_branch
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+      with:
+          persist-credentials: false
+          fetch-depth: 0
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: '3.9.13'
     - name: Install dependencies
@@ -27,6 +44,7 @@ jobs:
     - name: Build data
       run: |
         python3 crawler.py
+        python3 upload.py
     - name: Commit files
       run: |
         git config --local user.email "ube@coder.okinawa.jp"
