--- a/.github/workflows/crawler_processor.yml
+++ b/.github/workflows/crawler_processor.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Install dependencies
       run: |
         python3 -m pip install --upgrade pip
-        pip install pandas==1.2.0 numpy==1.19.5 BeautifulSoup4==4.9.3 requests==2.28.1 urllib3==1.26.12 typer==0.6.1 python-decouple==3.6 pytest==7.1.3
+        pip install pandas==1.2.0 numpy==1.19.5 BeautifulSoup4==4.9.3 requests==2.28.1 urllib3==1.26.12 typer==0.6.1 python-decouple==3.6 pytest==7.1.3 supabase==0.7.1
         pip install get-chrome-driver --upgrade
         pip install -r requirements.txt
     - name: Build data
