--- a/.github/workflows/crawler_processor.yml
+++ b/.github/workflows/crawler_processor.yml
@@ -43,7 +43,7 @@ jobs:
         pip install -r requirements.txt
     - name: Build data
       run: |
-        python3 crawler.py
+        python3 upload.py
     - name: Commit files
       run: |
         git config --local user.email "ube@coder.okinawa.jp"
