--- a/.github/workflows/crawler_processor.yml
+++ b/.github/workflows/crawler_processor.yml
@@ -43,6 +43,7 @@ jobs:
         pip install -r requirements.txt
     - name: Build data
       run: |
+        python3 crawler.py
         python3 upload.py
     - name: Commit files
       run: |
