--- a/.github/workflows/calc_processor.yml
+++ b/.github/workflows/calc_processor.yml
@@ -3,13 +3,27 @@ name: Process calc
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 13 * * *'
+    - cron: '0 10 * * *'
 
 jobs:
   build:
     name: Process calc
+    permissions:
+      actions: write
+      checks: write
+      contents: write
+      deployments: write
+      issues: write
+      packages: write
+      pull-requests: write
+      repository-projects: write
+      security-events: write
+      statuses: write
     runs-on: ubuntu-latest
-
+    env:
+      SUPABASE_URL: ${{secrets.SUPABASE_URL}}
+      SUPABASE_ANON_KEY: ${{secrets.SUPABASE_ANON_KEY}}
+      SUPABASE_SERVICE_KEY: ${{secrets.SUPABASE_SERVICE_KEY}}
     steps:
     - name: Extract branch name
       shell: bash
@@ -23,7 +37,7 @@ jobs:
     - name: Install dependencies
       run: |
         python3 -m pip install --upgrade pip
-        pip install pandas==1.2.0 numpy==1.19.5 BeautifulSoup4==4.9.3 requests==2.28.1 urllib3==1.26.12 typer==0.6.1 python-decouple==3.6 pytest==7.1.3
+        pip install pandas==1.2.0 numpy==1.19.5 BeautifulSoup4==4.9.3 requests==2.28.1 urllib3==1.26.12 typer==0.6.1 python-decouple==3.6 pytest==7.1.3 supabase==0.7.1
     - name: Build data
       run: |
         python3 calc.py
